--- a/src/blocks/modules/case/case.html
+++ b/src/blocks/modules/case/case.html
@@ -1,7 +1,7 @@
 <section class="case">
 	<div class="container">
 		<div class="case__content">
-			<div class="case__articles">
+			<div class="case__articles swiper-container">
 				<div class="case__header">
 					<p class="case__title case__title--active">
 						<span>
@@ -19,220 +19,218 @@
 						</span>
 					</p>
 				</div>
-				<div class="swiper-container case__slider-container">
-					<div class="swiper-wrapper case__slider-wrapper">
-						<div class="swiper-slide case__slider-slide">
-							<div class="case__items articles">
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
-									</div>
-									<p class="item__title">
-										Ламинат Villeroy & Boch коллекция 2020-2021
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22!">
-									</div>
-									<p class="item__title">
-										Egger decorative collection 2020-22!
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22 DSP!">
-									</div>
-									<p class="item__title">
-										Egger decorative collection 2020-22 DSP!
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<div class="item item--clear"></div>
-								<div class="item item--clear"></div>
-								<div class="item item--clear"></div>
-							</div>
+				<div class="swiper-wrapper case__slider-wrapper">
+					<div class="swiper-slide case__slider-slide" data-name="Новинки">
+						<div class="case__items articles">
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
+								</div>
+								<p class="item__title">
+									Ламинат Villeroy & Boch коллекция 2020-2021
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Egger decorative collection 2020-22!">
+								</div>
+								<p class="item__title">
+									Egger decorative collection 2020-22!
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Egger decorative collection 2020-22 DSP!">
+								</div>
+								<p class="item__title">
+									Egger decorative collection 2020-22 DSP!
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<div class="item item--clear"></div>
+							<div class="item item--clear"></div>
+							<div class="item item--clear"></div>
 						</div>
-						<div class="swiper-slide case__slider-slide">
-							<div class="case__items articles">
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
-									</div>
-									<p class="item__title">
-										Ламинат Villeroy & Boch коллекция 2020-2021
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22!">
-									</div>
-									<p class="item__title">
-										Egger decorative collection 2020-22!
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22 DSP!">
-									</div>
-									<p class="item__title">
-										Egger decorative collection 2020-22 DSP!
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<div class="item item--clear"></div>
-								<div class="item item--clear"></div>
-								<div class="item item--clear"></div>
-							</div>
+					</div>
+					<div class="swiper-slide case__slider-slide" data-name="Акции">
+						<div class="case__items articles">
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
+								</div>
+								<p class="item__title">
+									Ламинат Villeroy & Boch коллекция 2020-2021
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Egger decorative collection 2020-22!">
+								</div>
+								<p class="item__title">
+									Egger decorative collection 2020-22!
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Egger decorative collection 2020-22 DSP!">
+								</div>
+								<p class="item__title">
+									Egger decorative collection 2020-22 DSP!
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<div class="item item--clear"></div>
+							<div class="item item--clear"></div>
+							<div class="item item--clear"></div>
 						</div>
-						<div class="swiper-slide case__slider-slide">
-							<div class="case__items articles">
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
-									</div>
-									<p class="item__title">
-										Ламинат Villeroy & Boch коллекция 2020-2021
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22!">
-									</div>
-									<p class="item__title">
-										Egger decorative collection 2020-22!
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22 DSP!">
-									</div>
-									<p class="item__title">
-										Egger decorative collection 2020-22 DSP!
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<a href="" class="item">
-									<div class="item__thumb resized">
-										<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
-									</div>
-									<p class="item__title">
-										Петли BLUM под фальшпанель с углом открывания 83°
-									</p>
-								</a>
-								<div class="item item--clear"></div>
-								<div class="item item--clear"></div>
-								<div class="item item--clear"></div>
-							</div>
+					</div>
+					<div class="swiper-slide case__slider-slide" data-name="Распродажа">
+						<div class="case__items articles">
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
+								</div>
+								<p class="item__title">
+									Ламинат Villeroy & Boch коллекция 2020-2021
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Egger decorative collection 2020-22!">
+								</div>
+								<p class="item__title">
+									Egger decorative collection 2020-22!
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Egger decorative collection 2020-22 DSP!">
+								</div>
+								<p class="item__title">
+									Egger decorative collection 2020-22 DSP!
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<a href="" class="item">
+								<div class="item__thumb resized">
+									<img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
+								</div>
+								<p class="item__title">
+									Петли BLUM под фальшпанель с углом открывания 83°
+								</p>
+							</a>
+							<div class="item item--clear"></div>
+							<div class="item item--clear"></div>
+							<div class="item item--clear"></div>
 						</div>
 					</div>
 				</div>
