--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -101,34 +101,34 @@
 	<div class="head-nav">
 		<div class="container">
 			<nav class="head-nav__content">
-				<a href="#modal-menu--1" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
 					Плитные материалы
 				</a>
-				<a href="#modal-menu--2" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
 					Мебельная фурнитура
 				</a>
-				<a href="#modal-menu--3" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
 					Инструменты, расходные материалы
 				</a>
-				<a href="#modal-menu--4" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
 					Кухонная техника
 				</a>
-				<a href="#modal-menu--5" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
 					Напольные покрытия
 				</a>
-				<a href="#modal-menu--6" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
 					Кромка
 				</a>
-				<a href="#modal-menu--7" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
 					Мебель
 				</a>
-				<a href="#modal-menu--8" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
 					Услуги
 				</a>
-				<a href="#modal-menu--9" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
 					Фасады
 				</a>
-				<a href="#modal-menu--10" data-fancybox="modal" class="head-nav__link">
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
 					Химия, Упаковка, Реставрация
 				</a>
 			</nav>
