--- a/src/blocks/modules/modal/modal.html
+++ b/src/blocks/modules/modal/modal.html
@@ -1,10 +1,43 @@
 <section id="modal-menu--1" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -340,25 +373,58 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--2" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -701,18 +767,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--3" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -1055,18 +1154,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--4" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -1409,18 +1541,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--5" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -1763,18 +1928,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--6" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -2117,18 +2315,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--7" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -2471,18 +2702,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--8" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -2825,18 +3089,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--9" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -3179,18 +3476,51 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
 <section id="modal-menu--10" class="modal-menu" style="display: none;">
-	<div class="container">
-		<div class="title modal-menu__main-title">
-			Заголовок
+	<div class="modal-menu__nav">
+		<div class="container modal-menu__container">
+			<nav class="head-nav__content">
+				<a href="#modal-menu--1" data-modal class="head-nav__link">
+					Плитные материалы
+				</a>
+				<a href="#modal-menu--2" data-modal class="head-nav__link">
+					Мебельная фурнитура
+				</a>
+				<a href="#modal-menu--3" data-modal class="head-nav__link">
+					Инструменты, расходные материалы
+				</a>
+				<a href="#modal-menu--4" data-modal class="head-nav__link">
+					Кухонная техника
+				</a>
+				<a href="#modal-menu--5" data-modal class="head-nav__link">
+					Напольные покрытия
+				</a>
+				<a href="#modal-menu--6" data-modal class="head-nav__link">
+					Кромка
+				</a>
+				<a href="#modal-menu--7" data-modal class="head-nav__link">
+					Мебель
+				</a>
+				<a href="#modal-menu--8" data-modal class="head-nav__link">
+					Услуги
+				</a>
+				<a href="#modal-menu--9" data-modal class="head-nav__link">
+					Фасады
+				</a>
+				<a href="#modal-menu--10" data-modal class="head-nav__link">
+					Химия, Упаковка, Реставрация
+				</a>
+			</nav>
 		</div>
-		<div class="modal-menu__content">
+	</div>
 
+	<div class="container modal-menu__container">
+		<div class="modal-menu__content">
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
@@ -3533,8 +3863,8 @@
 					</p>
 				</a>
 			</div>
-
 		</div>
+
 	</div>
 </section>
 
